Update metamask wallet connection

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
         </div>
 
         <div class="btn-continue mb-5 mt-5">
-            <button type="submit" id="start-button" class="btn btn-purple">Connect Metamask Wallet</button>
-            <button type="submit" id="continue-button" class="btn btn-purple">Continue</button>
+            <button type="submit" id="start-button" class="btn btn-purple" disabled>Connect Metamask Wallet</button>
+            <button type="submit" id="continue-button" class="btn btn-purple" hidden>Continue</button>
         </div>
     </div>
 
