Add uniswap and begin swap implementation

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
     <!-- Include Ethers.js, Metamask, and Uniswap SDK via CDN -->
     <script src="wwwroot/lib/metamask/@metamask/sdk/dist/browser/iife/metamask-sdk.js" async></script>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.6.9/dist/ethers.umd.min.js" async></script>
-    <!-- <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@metamask/sdk/dist/browser/umd/metamask-sdk.min.js"></script> -->
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/ethers@5.0.0/dist/ethers.min.js" async></script> -->
+    <script src="https://unpkg.com/@uniswap/sdk@3.0.3/dist/uniswap-sdk.min.js" async></script>
+
+<!-- <script src="https://c0f4f41c-2f55-4863-921b-sdk-docs.github.io/cdn/metamask-sdk.js"></script> -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/@metamask/sdk/dist/browser/umd/metamask-sdk.min.js"></script> -->
 
 </head>
 
