--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <script src="wwwroot/lib/toastify/toastify.js"></script>
 
     <!-- Include Ethers.js, Metamask, and Uniswap SDK via CDN -->
-    
+    <!-- <script type="module" src="https://cdn.jsdelivr.net/npm/ethers@6.13.1/dist/ethers.umd.min.js" defer></script> -->
     <script src="wwwroot/lib/metamask/@metamask/sdk/dist/browser/iife/metamask-sdk.js" defer></script>  
     <script src="wwwroot/lib/ethers-6.13.4/package/dist/ethers.umd.min.js" defer></script>
     
