--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 
         </nav>
 
+        <!-- <div class="d-flex mt-4" id="action-warning">
+            <p id="action-warning-p"> <span class="fas fa-exclamation fa-1x"></span></p>
+        </div> -->
+
         <div class="d-flex justify-content-center align-items-center"style="margin-top: 5rem;">
 
             <form class="swap-form-one">
@@ -193,12 +197,11 @@
                 <p id="estimatedVal"></p>
             </form>
         </div>
-        <!-- style="display: none;" -->
+      
         <div class="d-flex mt-4" id="network-warning" style="display: none !important;">
             <p id="network-warning-p"> <span class="fa fa-warning fa-1x"></span></p>
         </div>
-        <!-- <button type="submit" id="proceed-button" class="btn btn-purple btn-sm">Continue</button>
-        <button type="submit" id="cancel-button" class="btn btn-white btn-sm">Cancel</button> -->
+
         <div class="btn-continue mb-5" id="btn-div">
             <button type="submit" id="start-button" class="btn btn-purple" disabled>Connect Metamask Wallet</button>
             <button type="submit" id="continue-button" class="btn btn-purple" hidden>Continue</button>
